Semi-fix to collapser overflow issue

--- a/src/css/components/_collapser.scss
+++ b/src/css/components/_collapser.scss
@@ -1,6 +1,9 @@
 .collapser {
-    overflow: hidden;
     height: auto;
     opacity: 1;
     transition: height .25s ease;
+
+    &.collapsed {
+        overflow: hidden;
+    }
 }
